BWT-565: fixed mobile overflow on parks pages (#584)
* BWT-565: fixed mobile overflow on parks pages

* BWT-565: changed config to allow google to test on dev

--- a/src/staging/src/styles/parks.scss
+++ b/src/staging/src/styles/parks.scss
@@ -210,6 +210,20 @@
   @media (min-width: $mediumBreakpoint) {
     padding: 0px 25px !important;
   }
+  .MuiGrid-spacing-xs-1 {
+    width: 100%;
+    margin: 0;
+    @media (min-width: $mediumBreakpoint) {
+      width: calc(100% + 8px);
+      margin: -4;
+    }
+    > .MuiGrid-item {
+      padding: 0;
+      @media (min-width: $mediumBreakpoint) {
+        padding: 4px;
+      }
+    }
+  }
 }
 
 .park-info-container .MuiAccordionSummary-root {
